# POC

./: .gitignore  ARCHITECTURE.md  BACKEND.md  BACKEND_CHECKLIST.md  README.md  REQUIREMENTS.md  Scheduler_share_safe_zip.txt  WORKFLOW.md  architecture.drawio  example.xml  pyproject.toml  workflow.drawio
db/migrations/: 001_channel_mrss_sources.sql  002_mrss_feeds_shared_url.sql  003_assets_and_schedule_tables.sql  004_schedule_json_storage.sql  005_channel_metadata.sql  007_asset_type_bumper.sql
lambda/: mrss_poller.py
logs/: app.log.2026-04-22_00  app.log.2026-04-22_08  app.log.2026-04-22_22  app.log.2026-04-23_22  app.log.2026-05-04_23
scripts/: run-api.sh
src/api/: main.py  repository.py  schemas.py  service.py
src/binge_scheduler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/common/: logging_config.py
src/ingestion/: cli.py  fetcher.py  ingest_runner.py  models.py  parser.py  poll_feeds.py  repository.py
src/scheduler/: cli.py  engine.py  models.py  repository.py  service.py  strategies.py  validation.py
ui-reference/: README.md  index.html  package-lock.json  package.json  vite.config.js
ui-reference/src/: App.jsx  ChannelsByCountryChart.jsx  FeedStatusCharts.jsx  config.js  index.css  main.jsx
