[project]
name = "binge-scheduler"
version = "0.1.0"
description = "MRSS ingestion and binge schedule tooling"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "psycopg[binary]>=3.2.0",
  "requests>=2.32.0",
  "uvicorn>=0.35.0",
]

[project.scripts]
ingest-mrss = "src.ingestion.cli:main"
poll-mrss-feeds = "src.ingestion.poll_feeds:main"
generate-schedule = "src.scheduler.cli:main"
scheduler-api = "src.api.main:run"

